--- a/index.html
+++ b/index.html
@@ -47,6 +47,25 @@
       background: rgba(0,0,0,0.8);
     }
 
+    .title-block {
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+
+    .title-block h1 {
+      font-size: 4rem;
+      font-weight: 700; 
+      line-height: 1;
+    }
+
+    .title-block h2 {
+      font-size: 1.5rem;
+      font-weight: 400;
+      margin-top: 0.5rem; 
+      letter-spacing: 2px;
+    }
+
+
     /* Content section */
     .content {
       max-width: 1000px;
@@ -88,9 +107,14 @@
 <body>
   <!-- Hero section -->
   <section class="hero">
-    <h1>👋 Hi, I'm Nicole</h1>
-    <a href="nicole@tonnerartistmanagement">Contact Me</a>
+    <div class="title-block">
+      <h1>tonner</h1>
+      <h2>artist management</h2>
+    </div>
+    <a href="mailto:youremail@example.com">Contact Me</a>
   </section>
+  
+
 
   <!-- Content section -->
   <section class="content">
