--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
   <title>Gareth Davie</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@600&display=swap" rel="stylesheet">
   <style>
     /* Reset */
     * { margin: 0; padding: 0; box-sizing: border-box; }
 
     body {
-      font-family: 'Helvetica Neue', Arial, sans-serif;
+        font-family: 'Lexend', sans-serif;
       line-height: 1.6;
       color: #333;
     }
@@ -48,23 +49,22 @@
     }
 
     .title-block {
-      text-align: center;
-      margin-bottom: 2rem;
+        text-align: center;
+        margin-bottom: 2rem;
     }
 
     .title-block h1 {
-      font-size: 4rem;
-      font-weight: 700; 
-      line-height: 1;
+        font-size: 5rem;
+        font-weight: 600; 
+        line-height: 1.1;
     }
 
     .title-block h2 {
-      font-size: 1.5rem;
-      font-weight: 400;
-      margin-top: 0.5rem; 
-      letter-spacing: 2px;
+        font-size: 1.8rem;
+        font-weight: 600;
+        margin-top: -0.2rem;
+        letter-spacing: 1px;
     }
-
 
     /* Content section */
     .content {
