made tonner bigger

--- a/index.html
+++ b/index.html
@@ -49,12 +49,13 @@
     }
 
     .title-grid .line1 {
-        font-size: clamp(3rem, 8vw, 5rem);  /* responsive scaling */
+        font-size: clamp(3rem, 10vw, 7rem); /* bigger overall */
         font-weight: 600;
         line-height: 1;
-        text-transform: lowercase;  /* optional: matches "tonner" style */
+        text-transform: lowercase;
         text-shadow: 2px 2px 6px rgba(0,0,0,0.5);
-    }
+    }   
+
 
     .title-grid .line2 {
         font-size: clamp(1.2rem, 3vw, 1.8rem);
@@ -62,7 +63,7 @@
         margin-top: -0.2rem;        /* tight lockup */
         letter-spacing: 2px;
         line-height: 1;
-        text-transform: uppercase;  /* optional: gives "artist management" logo feel */
+        text-transform: lowercase;  /* optional: gives "artist management" logo feel */
     }
 
 
