made tonner smaller lol

--- a/index.html
+++ b/index.html
@@ -58,12 +58,10 @@
 
 
     .title-grid .line2 {
-        font-size: clamp(1.2rem, 3vw, 1.8rem);
+        font-size: 0.36em;       /* scale proportionally to line1 */
         font-weight: 600;
-        margin-top: -0.2rem;        /* tight lockup */
-        letter-spacing: 2px;
-        line-height: 1;
-        text-transform: lowercase;  /* optional: gives "artist management" logo feel */
+        margin-top: -0.1em;      /* adjust vertical spacing in em units */
+        letter-spacing: 0.1em;   /* optional */
     }
 
 
