changed logo to svg

--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
         margin: 0 auto 2rem;
     }
 
-
     /* Content section */
     .content {
       max-width: 1000px;
@@ -87,7 +86,7 @@
 <body>
   <!-- Hero section -->
     <section class="hero">
-        <img src="logo-white.svg" alt="tonner artist management" class="logo">
+        <img src="logo3.svg" alt="tonner artist management" class="logo">
     </section>
 
   
