changed logo to pdf

--- a/index.html
+++ b/index.html
@@ -83,15 +83,15 @@
     }
   </style>
 </head>
+
 <body>
   <!-- Hero section -->
     <section class="hero">
-        <img src="logo3.svg" alt="tonner artist management" class="logo">
+        <img src="logo.png" alt="tonner artist management" class="logo">
+        <p class="hero-email">
+            <a href="mailto:youremail@example.com">youremail@example.com</a>
+        </p>
     </section>
-
-  
-  
-
 
   <!-- Content section -->
   <section class="content">
