removed cards section

--- a/index.html
+++ b/index.html
@@ -57,35 +57,6 @@
       padding: 3rem 1rem;
     }
 
-    .card {
-      display: flex;
-      flex-wrap: wrap;
-      margin-bottom: 2rem;
-      align-items: center;
-      gap: 1.5rem;
-    }
-
-    .card img {
-      width: 100%;
-      max-width: 400px;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.15);
-    }
-
-    .card-text {
-      flex: 1;
-      min-width: 250px;
-    }
-
-    .card-text h2 {
-      margin-bottom: 0.5rem;
-    }
-
-    /* Responsive */
-    @media(max-width: 768px) {
-      .hero h1 { font-size: 2rem; }
-      .card { flex-direction: column; text-align: center; }
-    }
   </style>
 </head>
 
@@ -94,27 +65,8 @@
     <section class="hero">
         <img src="logo.png" alt="tonner artist management" class="logo">
         <p class="hero-email">
-            <a href="mailto:youremail@example.com">youremail@example.com</a>
+            <a href="mailto:nicole@tonnerartistmanagement.com">nicole@tonnerartistmanagement.com</a>
         </p>
     </section>
-
-  <!-- Content section -->
-  <section class="content">
-    <div class="card">
-      <img src="image1.jpg" alt="Description 1">
-      <div class="card-text">
-        <h2>Project / Thing 1</h2>
-        <p>This is a description of the first image. You can explain what it represents, or say something personal here.</p>
-      </div>
-    </div>
-
-    <div class="card">
-      <img src="image2.jpg" alt="Description 2">
-      <div class="card-text">
-        <h2>Project / Thing 2</h2>
-        <p>This is the second description. It looks nice with the image next to it, and stacks on mobile.</p>
-      </div>
-    </div>
-  </section>
 </body>
 </html>
