--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         font-family: 'Lexend', sans-serif;
         font-size: 1.5rem;
         margin-bottom: 2rem;
+        max-width: 70%;
     }
 
     .hero-email a {
