--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
         font-size: 1.5rem;
         margin-bottom: 2rem;
         max-width: 70%;
+        height: auto;
+        display: block;
     }
 
     .hero-email a {
