--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Tonner Artist Management</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@600&display=swap" rel="stylesheet">
+  
   <style>
     /* Reset */
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -38,20 +39,27 @@
         font-family: 'Lexend', sans-serif;
         font-size: 1.5rem;
         margin-bottom: 2rem;
-        max-width: 70%;
-        height: auto;
-        display: block;
-    }
-
-    .hero-email a {
-        color: white;           /* make it visible on the background */
-        text-decoration: none;  /* remove underline */
-        transition: opacity 0.3s;
     }
 
     .hero-email a:hover {
         opacity: 0.7;           /* subtle hover effect */
     }
+
+    .email-link {
+        display: block;
+        margin-top: 2rem;
+        color: white;
+        text-decoration: none;
+        font-weight: 500;
+        transition: opacity 0.3s;
+        font-size: clamp(1rem, 2vw, 1.5rem);
+        text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
+    }
+
+.email-link:hover {
+  text-decoration: underline;
+}
+
 
     /* Content section */
     .content {
@@ -68,7 +76,7 @@
     <section class="hero">
         <img src="logo.png" alt="tonner artist management" class="logo">
         <p class="hero-email">
-            <a href="mailto:nicole@tonnerartistmanagement.com">nicole@tonnerartistmanagement.com</a>
+            <a href="mailto:youremail@example.com" class="email-link">youremail@example.com</a>
         </p>
     </section>
 </body>
