--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <section class="hero">
         <img src="logo.png" alt="tonner artist management" class="logo">
         <p class="hero-email">
-            <a href="mailto:youremail@example.com" class="email-link">youremail@example.com</a>
+            <a href="mailto:nicole@tonnerartistmanagement.com" class="email-link">nicole@tonnerartistmanagement.com</a>
         </p>
     </section>
 </body>
